# twitch-client

./: .env.example  CLAUDE.md  README.md  auth-server.js  auth.js  package.json  pyproject.toml  test-api.js
src/twitch_client/: __init__.py  auth.py  exceptions.py  http.py
tests/: test_auth.py
