[tool.poetry]
name = "twitch-client"
version = "0.1.1"
description = "Twitch OAuth client with token management and authenticated HTTP requests"
authors = ["ldraney"]
readme = "README.md"
packages = [{include = "twitch_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
